tests/ui/invalid_argument_attributes.stderr
error: expected `cancel_handle` or `from_py_with`
 --> tests/ui/invalid_argument_attributes.rs:4:29
  |
4 | fn invalid_attribute(#[pyo3(get)] _param: String) {}
  |                             ^^^

error: expected `=`
 --> tests/ui/invalid_argument_attributes.rs:8:45
  |
8 | fn from_py_with_no_value(#[pyo3(from_py_with)] _param: String) {}
  |                                             ^

error: expected `cancel_handle` or `from_py_with`
  --> tests/ui/invalid_argument_attributes.rs:12:31
   |
12 | fn from_py_with_string(#[pyo3("from_py_with")] _param: String) {}
   |                               ^^^^^^^^^^^^^^

error: `from_py_with` may only be specified once per argument
  --> tests/ui/invalid_argument_attributes.rs:20:54
   |
20 | fn from_py_with_repeated(#[pyo3(from_py_with = func, from_py_with = func)] _param: String) {}
   |                                                      ^^^^^^^^^^^^

error: expected identifier
  --> tests/ui/invalid_argument_attributes.rs:28:28
   |
28 | fn f(#[pyo3(from_py_with = "bytes_from_py")] _bytes: Vec<u8>) {}
   |                            ^^^^^^^^^^^^^^^

error[E0425]: cannot find value `func` in this scope
  --> tests/ui/invalid_argument_attributes.rs:16:55
   |
16 | fn from_py_with_value_not_found(#[pyo3(from_py_with = func)] _param: String) {}
   |                                                       ^^^^ not found in this scope

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0425`.
